updated README and css

--- a/views/stylesheets/main.sass
+++ b/views/stylesheets/main.sass
@@ -1,12 +1,17 @@
 h1 
+  margin: 0 auto
   background-image: url('/images/brain.jpg')
   background-repeat: no-repeat
   height: 325px
-  font-family: Arial, sans-serif
-  font-size: 2.5em
-  font-weight: normal
   padding-top: 190px
   text-align: center
   width: 334px
-  color: #fff
-  text-shadow: #1c3853 1px 1px 8px
+  
+  span
+    font-family: Arial, sans-serif
+    font-size: 1.5em
+    font-weight: normal
+    display: block
+    background-color: #444
+    opacity: 0.5
+    color: #fff
