--- a/views/stylesheets/main.sass
+++ b/views/stylesheets/main.sass
@@ -15,3 +15,25 @@ h1
     background-color: #444
     opacity: 0.5
     color: #fff
+
+.result
+  position: absolute
+  top: 0px
+  margin: 0px
+  padding: 0px
+  left: 0px
+  
+  li
+    list-style-type: none
+    
+    img
+      position: absolute
+      z-index: 2
+      top: 0px
+      left: 0px
+
+    iframe
+      width: 150px
+      height: 150px
+      overflow: hidden
+      border: 0px
