--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,6 +6,7 @@
     %meta{ "http-equiv" => "X-UA-Compatible", :content => "chrome=1" }
     %link{ :type => "text/css", :rel => "stylesheet", :href => versioned_css('main') }
     %script{ :type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js" }
+    %script{ :type => "text/javascript", :src => versioned_js('jquery.timer') }
     %script{ :type => "text/javascript", :src => versioned_js('neuronator') }
     %script{ :type => "text/javascript", :src => versioned_js('main') }
   
