added debugging view

--- a/views/stylesheets/main.sass
+++ b/views/stylesheets/main.sass
@@ -63,3 +63,20 @@ body
         height: 150px
         overflow: hidden
         border: 0px
+        
+  .debug
+    display: none
+    background-color: #000
+    color: #fff
+    float: left
+    clear: both
+    margin-top: 10px
+    font-family: Arial, sans-serif
+    padding: 5px
+    
+    h2
+      font-size: 12px
+      font-weight: normal
+      text-transform: uppercase
+    p
+      font-size: 10px
