added debugging view

--- a/views/stylesheets/main.sass
+++ b/views/stylesheets/main.sass
@@ -71,6 +71,7 @@ body
     float: left
     clear: both
     margin-top: 10px
+    width: 90%
     font-family: Arial, sans-serif
     padding: 5px
     
