--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,10 +1,11 @@
 !!!
 html
   head
-    title= title
+    title The Great Brain
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js')
-    script(type='text/javascript', src='/javascripts/nodes.js')
-    script(type='text/javascript', src='/javascripts/neuronator.js')
-    script(type='text/javascript', src='/javascripts/main.js')
+    - if (pageType == 'brain')
+      script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js')
+      script(type='text/javascript', src='/javascripts/nodes.js')
+      script(type='text/javascript', src='/javascripts/neuronator.js')
+      script(type='text/javascript', src='/javascripts/main.js')
   body!= body
