added landing page

--- a/views/index.jade
+++ b/views/index.jade
@@ -24,4 +24,5 @@ div(class='wrapper')
       li Sample Node (Image): <a href="https://github.com/ednapiranha/love-hate">love-hate</a>
       li Sample Node (Audio): <a href="https://github.com/ednapiranha/ambient">ambient</a>
     
+    p Maintained by <a href="http://twitter.com/ednapiranha">Jen</a>
   
