--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ div(class='wrapper')
 
   p An experimental simulation of remote node communication
   
-  p <a href="/brain?debug=true">Observe Now</a>
+  p(class='watch') <a href="/brain?debug=true">Watch Now</a>
   
   h2 What is it?
   
@@ -24,5 +24,5 @@ div(class='wrapper')
       li Sample Node (Image): <a href="https://github.com/ednapiranha/love-hate">love-hate</a>
       li Sample Node (Audio): <a href="https://github.com/ednapiranha/ambient">ambient</a>
     
-    p Maintained by <a href="http://twitter.com/ednapiranha">Jen</a>
+    p Maintained by <a href="http://twitter.com/ednapiranha">Jen</a> and <a href="https://twitter.com/secretrobotron">Bobby</a>
   
