updated homepage text

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,6 +15,10 @@ div(class='wrapper')
   
   p Feel free to fork any of our sample nodes below and replace with your respective content. The sample nodes are all developed in <a href="http://www.sinatrarb.com">Sinatra</a>, <a href="http://haml-lang.com">Haml</a> and <a href="http://sass-lang.com">Sass</a>. Once you are happy with your node, deploy to a server where we can access the site. An easy place to deploy to is <a href="http://www.heroku.com">Heroku</a>.
   
+  h2 Technical Notes
+  
+  p This currently works best with the latest version of <a href="http://www.mozilla.com/firefox/fx">Firefox</a>. It tends to crash in Chrome and Safari after a short period of time when the <audio> tag is involved.
+  
   section
     h2 Github Repositories
     
