updated homepage text

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,7 +17,7 @@ div(class='wrapper')
   
   h2 Technical Notes
   
-  p This currently works best with the latest version of <a href="http://www.mozilla.com/firefox/fx">Firefox</a>. It tends to crash in Chrome and Safari after a short period of time when the <audio> tag is involved.
+  p This currently works best with the latest version of <a href="http://www.mozilla.com/firefox/fx">Firefox</a>. It tends to crash in Chrome and Safari after a short period of time when the &lt;audio&gt; tag is involved.
   
   section
     h2 Github Repositories
