updated css and node

--- a/views/index.jade
+++ b/views/index.jade
@@ -23,7 +23,7 @@ div(class='wrapper')
     h2 Github Repositories
     
     ul
-      li The Great Brain repository: <a href="https://github.com/ednapiranha/the-great-brain">the-great-brain</a>
+      li The Great Brain: <a href="https://github.com/ednapiranha/the-great-brain">the-great-brain</a>
       li Sample Node (Text): <a href="https://github.com/ednapiranha/message-from-our-sponsors">message-from-our-sponsors</a>
       li Sample Node (Image): <a href="https://github.com/ednapiranha/love-hate">love-hate</a>
       li Sample Node (Audio): <a href="https://github.com/ednapiranha/ambient">ambient</a>
