--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ div(class='wrapper')
   
   h2 What is it?
   
-  p The Great Brain is a project that sends and receives boolean data between remote servers. Each remote server the brain connects to is considered a 'node', which responds with one of the following: text, an image, audio or a video.
+  p The Great Brain is a database-less and authentication-free project that sends and receives boolean data between remote servers. Each remote server the brain connects to is considered a 'node', which responds with one of the following: text, an image, audio or a video.
   
   p In this simple format, the key is to keep the code as simple as possible and vary the HTML content response as much as possible.
   
