--- a/views/index.jade
+++ b/views/index.jade
@@ -29,4 +29,14 @@ div(class='wrapper')
       li Sample Node (Audio): <a href="https://github.com/ednapiranha/ambient">ambient</a>
     
     p Maintained by <a href="http://twitter.com/ednapiranha">Jen</a> and <a href="https://twitter.com/secretrobotron">Bobby</a>
-  
+    
+script(type='text/javascript')
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-4319539-32']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
