--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 div(class='wrapper')
   h1 The Great Brain 
 
-  p An experimental simulation of remote node communication
+  p An experimental simulation of the brain as a simple process of remote node communication
   
   p(class='watch') <a href="/brain?debug=true">Watch Now</a>
   
