--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ div(class='wrapper')
   
   p The Great Brain is a database-less and authentication-free project that sends and receives boolean data between remote servers. Each remote server the brain connects to is considered a 'node', which responds with one of the following: text, an image, audio or a video.
   
-  p In this simple format, the key is to keep the code as simple as possible and vary the HTML content response as much as possible.
+  p In this basic format, the key is to keep the code as minimal as possible and vary the HTML content response as much as possible.
   
   h2 How can I contribute?
   
