--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,7 +65,7 @@ body {
 }
 
 .wrapper p.watch a {
-  background-color: #57bbef;
+  background-color: #30d0de;
   color: #fff;
   padding-left: 5px;
   padding-right: 5px;
