--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -132,13 +132,14 @@ code {
   position: relative;
   margin: 0 auto;
   padding: 0px;
-  width: 900px;
+  width: 82%;
   clear: both;
   display: block;
 }  
 .result li {
-  margin: 0px;
+  margin: 1px;
   padding: 0px;
+  border: 6px solid #000;
   background-image: url('http://love-hate.heroku.com/images/snow.gif');
   list-style-type: none;
   float: left;
@@ -146,11 +147,13 @@ code {
   width: 150px;
   position: relative;
   overflow: hidden;
+  border-radius: 30px;
+  z-index: 3;
 }    
 .result li a {
   display: block;
   position: absolute;
-  bottom: 0px;
+  bottom: 15px;
   width: 144px;
   overflow: hidden;
   text-decoration: none;
@@ -168,42 +171,46 @@ code {
 .result li img, .result li p {
   position: absolute;
   z-index: 2;
-  top: 0px;
-  left: 0px;
-}     
+  top: -4px;
+  left: -4px;
+}   
+.result li img {
+  border-radius: 30px;
+  border: 2px solid #fff;
+  width: 154px;
+  height: 154px;
+}  
+.result li p, .debug {
+  font-family: "Monaco", "Lucida Console";
+}
 .result li p {
-  font-size: 1em;
+  font-size: 0.7em;
   background-color: #000;
   display: inline;
-  padding: 3px;
+  padding: 10px;
   line-height: 1.2em;
   color: #fff;
-  text-transform: uppercase;
-}     
-iframe {
-  width: 150px;
-  height: 150px;
-  overflow: hidden;
-  border: 0px;
-}        
+}            
 .debug {
   display: none;
   background-color: #000;
+  display: block;
   color: #fff;
-  border-top: 5px solid #fff;
+  border-radius: 30px;
 }    
 .debug h2 {
   font-size: 1em;
   font-weight: normal;
   text-transform: uppercase;
-  padding-left: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-left: 20px;
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-bottom: 10px;
 }
 
 .debug p {
-  font-size: 0.9em;
-  padding-bottom: 5px;
-  padding-left: 5px;
-  padding-right: 5px;
+  font-size: 0.7em;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
